<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gorrotowi.popularmoviestwo.MovieDetailActivityFragment">

    <com.gorrotowi.popularmoviestwo.customElements.AwesomeTextView
        android:id="@+id/icon_movie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/icon_movie"
        android:textColor="@android:color/darker_gray"
        android:textSize="200sp"
        android:visibility="visible" />

    <RelativeLayout
        android:id="@+id/relativeLayoutContainerTitle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/material_deep_teal_500"
        android:visibility="gone">

        <TextView
            android:id="@+id/txtTitle"
            style="@style/title_movie"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/txtFavMovie"
            android:text="@string/hello_world"
            android:visibility="visible" />

        <com.gorrotowi.popularmoviestwo.customElements.AwesomeTextView
            android:id="@+id/txtFavMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/icon_heart"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/content_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/activity_horizontal_margin">

                <ImageView
                    android:id="@+id/img_movie_poster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:contentDescription="@string/img_item_descr"
                    android:scaleType="centerInside" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/txtReleaseDate"
                        style="@style/detail_txt_style"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!--<TextView-->
                    <!--android:id="@+id/txtTime"-->
                    <!--style="@style/detail_txt_style"-->
                    <!--android:text="@string/hello_world"-->
                    <!--android:textSize="18sp"-->
                    <!--android:textStyle="italic" />-->

                    <TextView
                        android:id="@+id/txtRate"
                        style="@style/detail_txt_style"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/textViewSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/OverView" />

            <TextView
                android:id="@+id/txtDescr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <TextView
                style="@style/textViewSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trailer" />

            <ListView
                android:id="@+id/listTrailer"
                android:layout_width="match_parent"
                android:layout_height="180dp" />

            <TextView
                style="@style/textViewSubTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reviews" />

            <ListView
                android:id="@+id/listReviews"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
